--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
                             <div class="member-photo">
                                 <i class="fas fa-user"></i>
                             </div>
-                            <h4>Co-President</h4>
-                            <p class="member-name">Esporie</p>
-                            <p class="member-description">[Description to be added]</p>
+                            <h4>Co-President & Interim-Treasurer</h4>
+                            <p class="member-name">Espoire Fadhiri</p>
+                            <p class="member-description">Data Science & Financial Engineering Minor in Economics. Previous Experience: St. Louis Fellow at WashU In St. Louis, For St.Louis (Office of the Chancellor)</p>
                         </div>
                         <div class="team-member">
                             <div class="member-photo">
@@ -332,9 +332,9 @@
                             <div class="member-photo">
                                 <i class="fas fa-user"></i>
                             </div>
-                            <h4>Professional Development</h4>
-                            <p class="member-name">Ahmed</p>
-                            <p class="member-description">[Description to be added]</p>
+                            <h4>Professional Development Chair</h4>
+                            <p class="member-name">Ahmed Elgamel</p>
+                            <p class="member-description">Business + Computer Science. Previous Experience: SWE at Mapable</p>
                         </div>
                     </div>
                 </div>
